# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerodha_tickersaver"
version = "1.1.2"
description = "Get the latest price of instruments via web-sockets from zerodha"
readme = "README.md"
authors = [{ name = "Simon", email = "simonmh2u@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
]
keywords = ["zerodha", "websockets", "ltp", "tick", "nfo", "options"]
dependencies = [
    "kiteconnect >= 4.1.0",
    "requests >= 2.28.1",
]
requires-python = ">=3.9"


#[tool.setuptools]
#packages = ["tickersaver", "tickersaver.fetcher"]

[tool.setuptools.packages.find]
include = ["tickersaver*"]

[project.optional-dependencies]
dev = ["ipdb", "ipython"]

[project.urls]
Homepage = "https://github.com/simonmh2u/TickerSaver"

[project.scripts]
tickersaverapp = "tickersaver.fetcher.kite.ws_tick_fetcher.__main__:main"